syntax = "proto3";

package hello.v1;

option go_package = "example.com/server2/gen/hello/v1;hellov1";
option java_multiple_files = true;
option java_package = "com.example.hello.v1";

service Greeter {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {}
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}
